Fixed some alignment

--- a/UK_Immigration/stylesheet.css
+++ b/UK_Immigration/stylesheet.css
@@ -1,7 +1,8 @@
 /*Start Area Chart Styles*/
 div#stack_area_div {
+    display: block;
     position: absolute;
-    top: 10px;
+    top: 30px;
 }
 
 body {
@@ -41,7 +42,8 @@ svg {
 
 select#stack_area_type {
     position: absolute;
-    left: 2rem;
+    left: 60px;
+    top: 100px;
 }
 
 
@@ -80,6 +82,7 @@ div.info h1, div.info h2, div.info h3{
 
 /*Begin Pie Chart styles*/
 div#ro_visa_pies {
+    display: block;
     position: relative;
     top: 10px;
     left: 850px;
@@ -121,6 +124,7 @@ pie{
 
 /*Begin Stacked Bar Chart */
 div#stack_svg_div {
+    display: block;
     position: relative;
     top: 10px;
     
@@ -176,5 +180,5 @@ ul {
 }
 
 h4 {
-    text-align: center;
+    text-align: left;
 }
